--- a/entregable1/styles/style.css
+++ b/entregable1/styles/style.css
@@ -25,8 +25,8 @@ body{
     padding: 1rem 2rem;
     top: 0;
     left: 0;
-    width: 100vw;
-    padding-right: 2rem;
+    width: 100%;
+    padding-right: 1rem;
    
 }
 
