--- a/entregable1/styles/style.css
+++ b/entregable1/styles/style.css
@@ -7,7 +7,10 @@
     box-sizing: border-box;
 }
 
-
+main{
+    display: flex;
+    align-items: center;
+}
 body{
     background-color: whitesmoke;
     font-family: "Ubuntu", sans-serif;
@@ -26,7 +29,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    padding-right: 1rem;
+    
    
 }
 
@@ -46,37 +49,48 @@ body{
     color: whitesmoke;
     text-decoration: none;
 }
-main{
-    display: flex;
-    flex-direction:column;
-    align-items:center;
-}
+
+/* Seccion Primaria */
 #section-principal{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: rgb(0, 0, 0);
+    flex-direction: row;
+    color: black;
+    padding: 4rem 8rem;
+    
 }
-#section-principal p{
+
+#section-principal h2{
     display: flex;
+    padding: 2rem 4rem;
+    border: none;
     align-items: center;
     justify-content: center;
 }
 
-#section-principal picture{
+#section-principal p{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: row;
+}
+
+
+#section-principal img{
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
 }
 
-#section-principal img{
-    display: flex;
-    align-items: end;
-    justify-content: flex-end;
-    width: auto;
-    height: auto;
-    padding: 1rem 2rem;
-    border: none;
+
+
+
+/* Seccion Secundaria */
+
+#section-secundaria{
+        display: flex;
+        flex-direction: row;
+        color: black;
+        padding: 4rem 8rem;
 }
 
 
